Lab400.md updated from https://stackedit.io/

--- a/Lab400.md
+++ b/Lab400.md
@@ -1,7 +1,410 @@
+[![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/001.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/001.png)
 
+# [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#introduction) 실습 소개
 
+이 실습에서는 마케팅 분석가 인 Emma의 인물로 가정하고 진행합니다. Emma는 Oracle Advanced Analytics를 사용하여 현재 및 과거 판매 패턴을 검토하고 Heather (데이터 과학자)의 머신러 학습 결과를 사용하여 중요한 고객을 대상으로하는 새로운 마케팅 프로젝트를 지원합니다. Emma는 팀원 중 일부와 협력하여 이미 Oracle Advanced Analytics를 사용하여 판매 데이터를 검토하고 있습니다. Emma는 보다 좋은 마케팅을 위하여 Data Visualization 컨텐트를 검토하려고합니다. 그녀는 다른 분석가의 콘텐츠를 가져 와서 판매 관점을 검토 한 다음 헤더 (Heather)가 만든 판매 신용 머신러닝 결과에 대한 시각화를 작성합니다.
 
-> Written with [StackEdit](https://stackedit.io/).
+Lab100의 Step7에서 생성한 Oracle Machine Learning 인스턴스를 사용하여 이번 실습을 진행합니다.
+
+Lab 가이드 원본(영문)을 보시려면 다음 링크를 통해 확인 할 수 있습니다. [github oracle](https://github.com/oracle/learning-library/tree/master/workshops/adwc4dev)
+
+## [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#objectives) 실습 목표
+
+- Oracle Advanced Analytics에 로그인하고 Sales.dva 프로젝트 임포트
+- 지난 4 년간 판매 정보가 포함된 사전 제작된 대시 보드를 검토
+- ADWC wallet을 업로드하고 새로운 ADWC 연결 생성
+- 새로운 credit_scoring_100k 데이터 파일 생성
+- 신용 점수 데이터에 대한 콘텐츠 생성
+
+## [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#required-artifacts)사전 준비 사항
+
+-   A Trial Account
+
+# [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#steps)Steps
+
+## [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#review-sales-history) 판매 이력 검토
+
+### [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#step-1-sign-in-to-oracle-analytics-cloud-and-import-the-salesdva-project)**STEP 1: Oracle Analytics Cloud에 로그인하고 Sales.dva 프로젝트 임포트**
+
+-   Dashboard에서   `Analytics Cloud` 서비스를 선택합니다.
+     ![enter image description here](https://lh3.googleusercontent.com/qsioB6s8sJMC_WhklH2pE8S_4ghN7fUpIUCkcLhsUBbkTndksie6YGgHZPJetxOOSxMVHIEDm9Uy)
+         
+    ![enter image description here](https://lh3.googleusercontent.com/LTzF9Wo8nFUhJVRs2-a8d5TigKQf2dq07_ucfxnfoSoBfvHuy9UIBzGETec4sdZhnsTjSpmQIk_h)   
+-   오른쪽 끝에 있는 메뉴 아이콘을 클릭하고,  `Oracle Analytics Cloud URL` 메뉴를 선택합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/004.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/004.png)
+    
+-   오른쪽 상단의 메뉴 아이콘을 클릭하여 메뉴를 확장합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/005.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/005.png)
+    
+-   기존 프로젝트를 가져와서 새 프로젝트를 만듭니다. 왼쪽에있는`Project`를 선택하십시오.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/006.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/006.png)
+    
+-   현재 작업 공간에서  `All Projects` 를 선택하십시오.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/007.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/007.png)
+    
+-   오른쪽 상단의 메뉴에서  `Import Project` 를 선택하십시오.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/008.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/008.png)
+    
+-   git의 [ install]([https://github.com/oracle/learning-library/tree/master/workshops/adwc4dev/install](https://github.com/oracle/learning-library/tree/master/workshops/adwc4dev/install))  디렉토리에서 Sales.dva 파일을 다운로드하고, 해당 파일을 선택합니다.
+
+     
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/009.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/009.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/010.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/010.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/011.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/011.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/012.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/012.png)
+    
+
+### [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#step-2-review-the-pre-built-dashboards-that-sales-information-for-the-past-four-years)**STEP 2: 지난 4 년간 판매 정보가 포함된 사전 제작된 대시보드 검토**
+
+-   위의 단계에서 임포트한 `Sales` 프로젝트를 선택합니다.     
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/013.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/013.png)
+    
+-   마케팅 분석가가 생성하여 공유한 콘텐츠를 검토합니다. 현재 `Visualize`관점으로 보여지는 그래프입니다. `Prepare`와`Narrate` 관점으로도 가능합니다. `Narrate` 관점를 선택하십시오.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/014.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/014.png)
+    
+-   캔버스의 왼쪽에서 오른쪽으로 검토할 수 있는 페이지 입니다.
+Customer Profitabliity는 Emma가 새로운 마케팅 프로젝트와 관련하여 특히 중요하게 생각합니다. Emma는 OAC를 사용하여 다른 방식의 시각화를 통해 다양하게 검토할 수 있습니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/015.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/015.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/016.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/016.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/017.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/017.png)
+    
+-   `Performance`  컨버스에서, 마우스로 여러 사무실을 이동해 보십시요.  밴쿠버에는 117 개 사무소가 있으며, 빅토리아에는 119 개 사무소가 있지만 수익성은 훨씬 낮습니다. 이 지역은 마케팅 캠페인 초기에 집중하게 될 것입니다. 앞으로의 상황에 대해 머신러닝이 분석한 사항을 논의하기 위해,  Heather에게 노트를 남기겠습니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/018.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/018.png)
+    
+-   Heather에게 남길 노트를 생성합니다. - 오른쪽 상단의 note 아이콘을 선택하여 다음과 같이 메시지를 남깁니다.  `Hey Heather, can you take a look at these offices and learn why the profit varies so much independent of the customer base?`.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/019.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/019.png)
+    
+-   다른 캔버스를 선택하여 검토해 보겠습니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/020.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/020.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/021.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/021.png)
+    
+-   생성 되었지만, 선택되지 않은 몇 가지 흥미로운 캔버스가 있음을 주목합니다. `Top Countries`와`Diagram` 캔버스를 아래로 드래그 앤 드롭하십시오.  [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/022.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/022.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/023.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/023.png)
+    
+
+### [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#step-3-upload-your-adwc-wallet-and-create-a-new-adwc-connection)**STEP 3: ADWC wallet을 업로드하고 새로운 ADWC 연결 생성**
+
+-   왼쪽 상단의 메뉴를 클릭하고 `Console` 을 선택하십시오. 
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/024.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/024.png)
+    
+-   `Connections`를 클릭합니다.
+
+![enter image description here](https://lh3.googleusercontent.com/HEAmpent89SKUlt6UHyBcDPwTUhBo2MgFJd-S2u0UZkf6n_cbaXH2KEN9fNCfzEh_E6bgkHEIiff)
+- 오른쪽 상단 햄버거 메뉴 아이콘을 클릭하고, `Upload Wallet`을 선택하십시오.
+   [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/026.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/026.png)
+    
+   [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/026.1.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/026.1.png)
+    
+-   Lab 100에서 다운로드한 wallet을 압축해제한 후, `cwallet.sso` 파일을 선택합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/027.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/027.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/028.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/028.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/029.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/029.png)
+  
+    
+-  이전 화면의 왼쪽 햄버거 메뉴를 클릭하고, `Data`를 선택합니다.
+![enter image description here](https://lh3.googleusercontent.com/zs6kLgSrwXTgaSU3TqkEn9Apzf28htF9vuJRtkoFj6eQ9k-WaSTCqw_o3ynRzmJ1vd4uUBis4IRD)
+
+-  차례대로 상단 메뉴에서 `Connections` 선택, `Create` 버튼을 선택하고 `Connection`아이콘을 선택합니다.
+
+![enter image description here](https://lh3.googleusercontent.com/NX1YoRpjFyni7hJ7yGuokZK2hu937ak1gcKgqBF0EcQHqE7fbSXclyjAICp9nAXSPsE8NBodMOPE)
+- Type에서 `Oracle Autonomous Data Warehouse Cloud`를 선택합니다.
+![enter image description here](https://lh3.googleusercontent.com/Qr4Fx9W64sgq08n6fupKrsaDDI1bO-UCoo45Pzi_jh2eCX2U0_h2LRFPlSNHmjr3NrpqIIPTE8FY)
+
+-   연결정보의 세부 사항을 다음과 같이 입력하고, Save 버튼 클릭합니다. 
+	- Client Credentials 오른쪽의 Select...버튼을 클릭하고, 다운로드한  wallet.zip 파일을 선택합니다.
+
+![enter image description here](https://lh3.googleusercontent.com/FsW6WnbQU-A8xJA8H-xwWDZN_ZsO0V4a5l4o10UbzywbKr0MN8HYGP4_j9J4hhmkwNLgAhaRY9YO)
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/035.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/035.png)
+    
+
+### [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#step-4-create-data-sets)**STEP 4: 데이터 셋 생성**
+
+-   상단 메뉴의 `Data Sets` 탭을 선택하고, `Create`-> `Data Set` 선택 합니다.
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/036.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/036.png)
+    
+-   방금 생성한 `adwc` 연결 아이콘을 선택합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/037.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/037.png)
+    
+-    `ADWC_WS` 스키마를 선택합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/038.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/038.png)
+    
+-    `AI_EXPLAIN_OUTPUT_CREDIT_SCORE_BIN`  테이블을 선택하고,  `Add All`  클릭하고, `Add` 클릭합니다.
+[![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/039.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/039.png)        
+        [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/040.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/040.png)
+    
+-   다음 데이터 셋을 생성하기 위해   `<`  아이콘을 클릭합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/040.1.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/040.1.png)
+    
+-   다시  `Create` 선택하고, 나머지 데이터 셋 생성작업을 반복합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/041.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/041.png)
+    
+-    `adwc`  데이터 소스를 선택,  `ADWC_WS`  스키마를 선택하여, 다음 4개의 테이블에 대해 위와 동일한 방법으로 테이터 셋 생성작업을 하십시요.
+    
+    -   `AI_EXPLAIN_OUTPUT_MAX_CC_SPENT_AMOUNT`
+    -   `CREDIT_SCORING_100K_V`
+    -   `CREDIT_SCORE_NEW_PREDICTIONS`
+    -   `N1_LIFT_TABLE`
+    
+-   기본 테이블 정의를 약간 조정해야합니다. `N1_LIFT_TABLE` 항목으로 마우스를 가져가서 가장 오른쪽 메뉴를 선택한 다음 '`Inspect`를 선택하십시오.     
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/042.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/042.png)
+    
+-  `Data Elements`를 선택하고, 첫 번째 속성을 `QUANTILE_NUMBER`로 변경합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/043.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/043.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/044.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/044.png)
+    
+-   다음  `CREDIT_SCORE_NEW_PREDICTIONS`  테이블 속성을 변경합니다.  `Inspect`선택하고 모든 컬럼을 `Attribute`로 변경합니다. 모든 컬럼을 변경하기 위해 스크롤 다운해야 합니다. 
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/045.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/045.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/046.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/046.png)
+    
+-   마지막으로 CREDIT_SCORING_10OK_V의 모든 값을 `Attribute`으로 변경합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/047.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/047.png)
+    
+
+### [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#step-5-create-good-credit-factors-analysis)**STEP 5: 좋은 신용 요소 분석 생성**
+
+-   왼쪽메뉴에서 `Projects`  선택하고,  `Create` 버튼 클릭합니다..
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/048.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/048.png)
+    
+-   Shift 키를 누른 상태에서 다음과 같이 선택하여 새 프로젝트에 추가합니다.
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/049.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/049.png)
+    
+-   `AI_EXPLAIN_OUTPUT_CREDIT_SCORE_BIN` 에서 `ATTRIBUTE_NAME` 과 `EXPLANATORY_VALUE`를 선택하고 드래그하여 컨버스로 이동시킵니다.     
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/050.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/050.png)
+    
+-   `RANK`에서 마우스 오른버튼 클릭하여,  `Create Filter`를 선택합니다. 
+- Start =  `0`,  End =  `10` 입력합니다..
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/051.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/051.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/052.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/052.png)
+    
+-   `EXPLANATORY_VALUE`에서 오른버튼 클릭하여 "High to Low" 선택합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/053.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/053.png)
+    
+-   캔버스 이름  `Canvas 1`을  `Good Credit Factors`로 변경합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/054.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/054.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/055.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/055.png)
+    
+-   새 프로젝트를 저장합니다. 상단 오른쪽 'Save' 버튼을 클릭하고, 'Save As'를 선택   `Credit Risk Analysis`이름으로 프로젝트를 저장합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/056.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/056.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/057.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/057.png)
+    
+
+### [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#step-6-create-max-cc-limit-analysis)**STEP 6: 최대 CC 한도 분석**
+
+-   이번 분석은 위의 분석과 매우 유사합니다. 새 Canvas를 만들기 위해 페이지 하단의 + 기호를 클릭합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/058.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/058.png)
+    
+-   다음과 같이 두개 필드를 선택하여 오늘쪽 캔버스로 드래그 합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/059.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/059.png)
+    
+-   `RANK` 속성에서 마우스 오른버튼 클릭하여   `Create Filter`를 선택하고,  `Start` = `0`  과 `End` =`10` 값을 입력합니다. 
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/060.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/060.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/061.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/061.png)
+    
+-   `EXPLANATORY_VALUE`에서  마우스 오른버튼 클릭하여, 'Sort' -> 'High to Low' 메뉴를 선택합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/062.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/062.png)
+    
+-   캔버스 이름을  `Max CC Limit`으로 변경합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/063.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/063.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/064.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/064.png)
+    
+
+### [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#step-7-cumulative-lift-analysis)**STEP 7: 누적 상승도 (Cumulative Lift) 분석**
+
+-   새 캔버스를 만들고 N1_LIFT_TABLE에서 'My Calculations 마우스 오른쪽 단추로 클릭하고 새 캔버스를 생성합니다. 
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/065.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/065.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/066.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/066.png)
+    
+-   Calculation 이름으로  `Chance`로 입력하고, 값을 `RSUM(.01)`로 입력합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/067.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/067.png)
+    
+-   아래의 필드를 드래그하여 캔버스로 이동시킵니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/068.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/068.png)
+    
+-   시각화(visualization)를 Line차트로 변경하고,  3 개의 값 (`Chance`,`QUANTILE_NUMBER` 및`GAIN_CUMULATIVE`)을 아래 표시된 위치로 이동시킵니다. 
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/069.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/069.png)
+    
+-   맨 왼쪽의 시각화(visualization) 팔레트를 클릭하고 텍스트 상자를 선택하고, 차트 위로 드래그 합니다.
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/070.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/070.png)
+    
+-   텍스트 상자를 두 번 클릭하고 `Cumulative Lift`를 입력하고, 글꼴 크기를 20으로 설정합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/071.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/071.png)
+    
+-   텍스트 상자를 다시 두 번 클릭하고 다음과 같이 입력합니다. (글꼴 크기를 12로 설정) :
+    
+
+```
+누적 리프트(Cumulative lift)는 우연히 얻을 수 있는 예측보다 훨씬 나은 예측 결과를 도출할 수 있는 모델을 사용하는 방법을 사용하여 측정합니다. 예를 들어 카탈로그를 우편으로 보낸 고객의 2%가 구매를 한다고 가정합니다. 또한, 카탈로그 수신자를 선택한 모델을 사용할 때는 10%의 고객이 구매를 한다고 가정합니다. 그러면, 수신자를 선택한 모델의 상승도(Lift)는 5입니다. 상승도(Lift)는 다른 데이터마이닝 모델을 비교하는 척도로 사용될 수도 있습니다. 상승도(Lift)는 실제 결과가 있는 데이터 테이블을 사용하여 계산되므로 상승도는 예상 결과에 대해 데이터와 관련하여 모델이 얼마나 잘 수행되는지 비교합니다. 상승도(Lift)는 실제 결과가 주어진 임의 선택에 대한 모델이 모델을 얼마나 잘 개선했는지 나타냅니다. Lift를 사용하면 모델이 새 데이터에 대해 수행하는 작업을 추론 할 수 있습니다.
+
+```
+
+-   컨버스 이름을 `Cumulative Lift`으로 변경합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/072.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/072.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/073.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/073.png)
+    
+-   주기적으로 프로젝트를 저장하십시오.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/074.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/074.png)
+    
+
+### [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#step-8-create-demographic-analysis)**STEP 8: Create Demographic Analysis.**
+
+-   페이지 하단의 `+`아이콘에서 마우스 오른쪽 버튼으로 클릭하고, 새 캔버스를 만든 다음 `CREDIT_SCORE_NEW_PREDICTIONS`에서 `My Calculations` 마우스 오른쪽 버튼으로 클릭하고 `Add Calculation..`을 선택합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/075.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/075.png)
+    
+-   새 계산의 이름을 `Row Count`로 저장하고, `Aggregate`아래에서 `Count*`를 두번 클릭합니다.     
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/076.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/076.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/077.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/077.png)
+    
+-   `CREDIT_SCORE_NEW_PREDICTIONS`을 확장하고`PROB_GOOD_CREDIT`와`Row Count`를 선택하여 캔버스 위로 드래그합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/078.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/078.png)
+    
+-   시각화(visualization)를 `Table`로 변경하고 `PROB_GOOD_CREDIT`에서 마우스 오른버튼을 클릭하여 `Create Filter`를 선택합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/079.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/079.png)
+    
+-  50 이하의 모든 값을 선택하고, 햄버거 메뉴 아이콘을 마우스 오른쪽 버튼으로 클릭하고 `Exclude Selections`를 선택합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/080.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/080.png)
+    
+-  왼쪽에 있는 시각화(visualization) 메뉴를 선택하고, 새로운 Pie 차트 선택합니다.      
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/081.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/081.png)
+    
+-   아래와 같이 오른쪽으로 드래그 합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/082.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/082.png)
+    
+-   Pie 차트 영역을 클릭하고, 왼쪽의 데이터 요소(Data Elements) 아이콘을 클릭하고 다음 그림과 같이 항목을 드래그합니다.     
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/083.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/083.png)
+    
+-   Pie 차트를 클릭하고 왼쪽의 `Data Values`의 값(Value)을 설정합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/084.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/084.png)
+    
+-   선택 사항 - 항목에서 오른쪽 클릭하고   `CREATE FILTER`를 선택합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/085.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/085.png)
+    
+-   왼쪽의 시각화(visualization) 아이콘을 선택하고 아래로 스크롤하여 `Text Box`를 선택한 다음 맨 위로 드래그하십시오. 
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/086.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/086.png)
+    
+- 텍스트 상자 안쪽을 두 번 클릭하고`Probability of Good Credit Given Various Demographic Factors(다양한 인구통계학적 요소를 고려한 신용확률)` 이라는 제목을 입력합니다. 글꼴 크기를 20으로 설정하고, 다음을 추가합니다.  
+- Double click inside the text box and enter the title  `Probability of Good Credit Given Various Demographic Factors`. Set the font size to 20. Then add the following:  
+`해당은 다양한 인구통계학적 요인에 대한 신용확률을 보여줍니다. 위의 필터를 조정하여 좋은신용을 가능에 대해 분석할 수 있습니다.`
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/087.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/087.png)
+    
+-   캔버스 이름을 `Demographic Analysis(인구통계학적 분석)`으로 지정합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/088.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/088.png)
+    
+
+### [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#step-9-analyze-other-factors-in-the-credit-scoring-data)**STEP 9: 신용점수 데이터의 다른 요인 분석**
+
+위에서 우리는`CREDIT_SCORE_NEW_PREDICTIONS` 테이블에 있는 좋은 신용을 예측하는 데 사용 된 요소의 하위 집합을 살펴 보았습니다. `CREDIT_SCORING_100K_V` 데이터 세트의 다른 요소를 분석하여 다른 요인을 분석할 수 있습니다.
+
+-   새로운 캔버스를 만들고 왼쪽에 있는`CREDIT_SCORING_100K_V`를 확장하여`PROB_GOOD_CREDIT`,`Row Count`,`Credit History`를 캔버스 위로 드래그합니다. 시각화(visualization)를 '`Pivot`으로 설정하십시오.
+  
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/089.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/089.png)
+    
+-   `PROB_GOOD_CREDIT`에 필터를 추가하고, 필드를 마우스 오른쪽 단추로 클릭하여 50 이상의 모든 값을 클릭하십시오.
+ 
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/090.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/090.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/091.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/091.png)
+    
+-   `CREDIT_HISTORY`를 오른쪽 클릭하고 상자 바깥 쪽을 클릭하여 모든 값이 기본값으로 선택되도록 합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/092.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/092.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/093.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/093.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/094.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/094.png)
+    
+-    새 시각화(visualization)를 추가합니다 - 트리 맵(Treemap)을 선택하고 피벗 테이블 아래로 끌어 놓습니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/095.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/095.png)
+    
+-   Treemap 시각화를 선택하고, 데이터 요소를 선택하십시오. 다음과 같이 항목을 드래그 합니다. 
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/096.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/096.png)
+    
+
+### [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#step-10-explore-other-interesting-visualizations-that-help-better-understand-the-information)**STEP 10: 보다 나은 분석을 위한 다양한 시각화**
+
+-   새 컨버스를 생성하고, `FAMILY_SIZE`,  `PROB_GOOD_CREDIT`, `ROW_COUNT`  을 드래그하여 컨버스로 이동시킵니다.  `Network`  시각화(visualization)를 선택합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/097.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/097.png)
+    
+-   높은 확률만 집중하기 위하여,  `PROB_GOOD_CREDIT` 에 필터를 만들고 50 이상을 선택합니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/098.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/098.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/099.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/099.png)
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/100.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/100.png)
+    
+-   차원을 하나 더 추가합니다. -  다음과 같이 `RESIDENTIAL STATUS`를 선택, 드래그하여  `Category`로 넣습니다.
+    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/101.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/101.png)
+    
+-    좋은 신용에 대한 완벽한 예측 가능성을 가진 사람들에 포커싱하겠습니다.  노드 100 에서 마우스 오른쪽 버튼으로 클릭하고 `Keep Selected`를 선택합니다.    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/102.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/102.png)    
+    [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/103.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/103.png)
+    
+-   도출된 결과를 통해,  2~3 명의 자녀를 둔 주택 소유자인 고객이 일반적으로 좋은 평판을 받았습니다.
+    
+-   해당을 통해 우리는 개별 customer_id로 보다 심도있게 하여 마케팅 캠페인을 실행하거나 추가 분석을 수행 할 수 있습니다. Oracle Machine Learning과 결합된 다양한 시각화는 다양한 비즈니스 애플리케이션을 지원하는 흥미로운 데이터 패턴을 식별 할 수있는 방법을 제공합니다. 이 경우 Emma는 제한된 마케팅 예산을 판매 프로모션의 효과를 극대화하는 활동에 집중할 수 있습니다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTc0MjA3MDQyNSwxNzcxMjA0NDkwLDc2Nj
+UxMTQ2MiwtMTQxMDE5MzIxNiwtODc3NTMyMzI2LDE3MTQyNzc0
+NjAsLTE2NTA0NTg3NzgsLTg2NjUzMTgwNywtMTMwNDUwMjE5MS
+w2NjI4NTI2MzUsLTE0NzA2MjkxNzEsLTE4MjIyMTc5NzgsODg3
+ODgyNzM4LC0xNzI0NTI1Njc0LDEyNjEzNjMwNTMsLTEyNjY0OD
+M3NTksNzQ0NTk0Mjg3LC03MjA5NjE3MCwtMTYzOTIyMTM5Niwy
+MDcxNjkyMDE5XX0=
+-->
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbMTY2MDU2MDI3N119
 -->
