--- a/Lab400.md
+++ b/Lab400.md
@@ -2,7 +2,7 @@
 
 # [](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/L400.md#introduction) 실습 소개
 
-이 실습에서는 마케팅 분석가 인 Emma의 인물로 가정하고 진행합니다. Emma는 Oracle Advanced Analytics를 사용하여 현재 및 과거 판매 패턴을 검토하고 Heather (데이터 과학자)의 머신러 학습 결과를 사용하여 중요한 고객을 대상으로하는 새로운 마케팅 프로젝트를 지원합니다. Emma는 팀원 중 일부와 협력하여 이미 Oracle Advanced Analytics를 사용하여 판매 데이터를 검토하고 있습니다. Emma는 보다 좋은 마케팅을 위하여 Data Visualization 컨텐트를 검토하려고합니다. 그녀는 다른 분석가의 콘텐츠를 가져 와서 판매 관점을 검토 한 다음 헤더 (Heather)가 만든 판매 신용 머신러닝 결과에 대한 시각화를 작성합니다.
+이 실습에서는 마케팅 분석가 인 Emma의 인물로 가정하고 진행합니다. Emma는 Oracle Advanced Analytics를 사용하여 현재 및 과거 판매 패턴을 검토하고 해미 (데이터 과학자)의 머신러닝 학습 결과를 사용하여 중요한 고객을 대상으로하는 새로운 마케팅 프로젝트를 지원합니다. Emma는 팀원 중 일부와 협력하여 이미 Oracle Advanced Analytics를 사용하여 판매 데이터를 검토하고 있습니다. Emma는 보다 좋은 마케팅을 위하여 Data Visualization 컨텐트를 검토하려고합니다. 그녀는 다른 분석가의 콘텐츠를 가져 와서 판매 관점을 검토 한 다음 해미가 만든 신용평가 머신러닝 결과에 대한 시각화를 작성합니다.
 
 Lab100의 Step7에서 생성한 Oracle Machine Learning 인스턴스를 사용하여 이번 실습을 진행합니다.
 
@@ -406,5 +406,5 @@ M3NTksNzQ0NTk0Mjg3LC03MjA5NjE3MCwtMTYzOTIyMTM5Niwy
 MDcxNjkyMDE5XX0=
 -->
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY2MDU2MDI3N119
+eyJoaXN0b3J5IjpbMTAzNjIyODk3Nl19
 -->
