Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -294,29 +294,11 @@ end;
 
 * 이 실습의 나머지는 아래와 같이 대화식으로 수행됩니다. 각 paragraph를 실행하여 단계를 진행합니다. 
 * 샘플 코드에 대한 설명은 모두 주석 및 markdown으로 적어 놓았습니다. 참고해서 실습을 진행하시면 되겠습니다.
-* 아래는 편의를 위한 스크린샷이니 참고하시기 바랍니다.![enter image description here](https://lh3.googleusercontent.com/F0JXX1D60m0k6ujMS0PC4Ye33fhhEQCgM2xtAPylEZN4gMv7MZ71-hX66BIstLKXsyfLQdrw_29i)
-
-	![enter image description here](https://lh3.googleusercontent.com/ObE1rCcoP6HNNcSdfH01kj1tje9-hyn6NX-lsiY7vyPnAVMEOGJtkfNE8uxPJGt6bFIkHkdj6_no)
-
-	![enter image description here](https://lh3.googleusercontent.com/axLthNp-EjDuz8pCxxEztJcWBZp3TCXgt3WniFm-lH0WBgzxGeeVet_DB9IrDzqLuOnffELPVQiW)
-
-	![enter image description here](https://lh3.googleusercontent.com/6FhIIgOEgONjSBQBWqKXesPMJv7bJMWgyepddTXikxWmzIPa90hsuWkUzuf6UEQRsW645NUhNPY7)
-
-	![enter image description here](https://lh3.googleusercontent.com/jkMj7cnFZewTvWzzmGer1leqx55igqBZmfJtqKpafc4ODB6Toswm-6BHqDul-4TkY6B3kWUUvvkr)
-
-	![enter image description here](https://lh3.googleusercontent.com/AFjxqvrS490_GAALXtE9IhxUw77u8TnHpKzPcxw_6k8YvDyP3Umf5H3MjHIlOdXMPS-GIZ-GZKYr)
-
-	![enter image description here](https://lh3.googleusercontent.com/iQ8y1l0vwlRRIZiJrCFi_M1tGG7uGvwKSySd_Ao_FKqXmZ4F0TYM5FX3150wO4u0nUYr_M6vMm4_)
-
-	![enter image description here](https://lh3.googleusercontent.com/J-UOtVktwN-kP0uPmKUTx9ejAGBnM8hdb5MffVDw75ZOTAtouswgggYxKxRtoeOfCQC0gdN0-4-q)
-
-	![enter image description here](https://lh3.googleusercontent.com/A2EnoBO5o6nGgp0D6tU65ylmxIkafyCXFpBS23-DprqIISFujE5YXGxWiusik8rgY8CY6mtcDvkB)
-
-	![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
-
+* 아래는 편의를 위한 스크린샷이니 참고하시기 바랍니다.
+![enter image description here](https://lh3.googleusercontent.com/1A9MVyuXe8OJ2CwigKQcOOAdsr5dI5fzkXfIUKqDPsr_a5lYhAg7lS3W0QsBiiY3WPTOOSRyb5gZ)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk5ODI4ODMyMywxMTg2NjQwNjEsLTg5Nj
-g1NDc4Myw3OTk1OTMxODgsODA4MzczMjQ3LC0xMjc0MTQ3Nzc5
-LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1MF19
+eyJoaXN0b3J5IjpbMjc2MDA4MDkzLDExODY2NDA2MSwtODk2OD
+U0NzgzLDc5OTU5MzE4OCw4MDgzNzMyNDcsLTEyNzQxNDc3Nzks
+NzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUwXX0=
 -->
