--- a/Lab300.md
+++ b/Lab300.md
@@ -295,13 +295,14 @@ end;
 * 이 실습의 나머지는 아래와 같이 대화식으로 수행됩니다. 각 paragraph를 실행하여 단계를 진행합니다. 
 * 샘플 코드에 대한 설명은 모두 주석 및 markdown으로 적어 놓았습니다. 참고해서 실습을 진행하시면 되겠습니다.
 * 아래는 편의를 위한 스크린샷이니 참고하시기 바랍니다.
-![enter image description here](https://lh3.googleusercontent.com/1A9MVyuXe8OJ2CwigKQcOOAdsr5dI5fzkXfIUKqDPsr_a5lYhAg7lS3W0QsBiiY3WPTOOSRyb5gZ=100*20)
+![enter image description here](https://lh3.googleusercontent.com/1A9MVyuXe8OJ2CwigKQcOOAdsr5dI5fzkXfIUKqDPsr_a5lYhAg7lS3W0QsBiiY3WPTOOSRyb5gZ= 100*20)
 
 
 
+<img src="https://lh3.googleusercontent.com/1A9MVyuXe8OJ2CwigKQcOOAdsr5dI5fzkXfIUKqDPsr_a5lYhAg7lS3W0QsBiiY3WPTOOSRyb5gZ" width="800" height="300" />
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzk2MDM5NDU1LDExODY2NDA2MSwtODk2OD
+eyJoaXN0b3J5IjpbOTM5MDEwNDUyLDExODY2NDA2MSwtODk2OD
 U0NzgzLDc5OTU5MzE4OCw4MDgzNzMyNDcsLTEyNzQxNDc3Nzks
 NzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUwXX0=
 -->
