--- a/Lab300.md
+++ b/Lab300.md
@@ -295,16 +295,18 @@ end;
 * 이 실습의 나머지는 아래와 같이 대화식으로 수행됩니다. 각 paragraph를 실행하여 단계를 진행합니다. 
 * 샘플 코드에 대한 설명은 모두 주석 및 markdown으로 적어 놓았습니다. 참고해서 실습을 진행하시면 되겠습니다.
 * 아래는 편의를 위한 스크린샷이니 참고하시기 바랍니다.
-![enter image description here](https://lh3.googleusercontent.com/1A9MVyuXe8OJ2CwigKQcOOAdsr5dI5fzkXfIUKqDPsr_a5lYhAg7lS3W0QsBiiY3WPTOOSRyb5gZ= 100*20)
-
-
 
 <img src="https://lh3.googleusercontent.com/1A9MVyuXe8OJ2CwigKQcOOAdsr5dI5fzkXfIUKqDPsr_a5lYhAg7lS3W0QsBiiY3WPTOOSRyb5gZ" width="800" height="400" />
 
 <img src="https://lh3.googleusercontent.com/5N0ZtSRAkBMmst25QPZ4ZqeP9pJuqrGVV08hSOUcmaTzKZodL_e3C6qhv2y1wRGzjcotkjcC0DGR" width="1000" height="400" />
-![enter image description here](https://lh3.googleusercontent.com/5N0ZtSRAkBMmst25QPZ4ZqeP9pJuqrGVV08hSOUcmaTzKZodL_e3C6qhv2y1wRGzjcotkjcC0DGR)
+
+
+![enter image description here](https://lh3.googleusercontent.com/RiURKMqvYiENqYqUoXgYBmBb2DERm3eJDOwkukuIhCTYTY-jemvQUzXYQXtN7TVEfaXUWrMpUgL-)
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMjkzOTA4NTksMTE4NjY0MDYxLC04OT
-Y4NTQ3ODMsNzk5NTkzMTg4LDgwODM3MzI0NywtMTI3NDE0Nzc3
-OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBdfQ==
+eyJoaXN0b3J5IjpbMTI3NzAwMjA1NCwtMTAyOTM5MDg1OSwxMT
+g2NjQwNjEsLTg5Njg1NDc4Myw3OTk1OTMxODgsODA4MzczMjQ3
+LC0xMjc0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMT
+AxMzk1MF19
 -->
