Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -300,12 +300,14 @@ end;
 
 <img src="https://lh3.googleusercontent.com/5N0ZtSRAkBMmst25QPZ4ZqeP9pJuqrGVV08hSOUcmaTzKZodL_e3C6qhv2y1wRGzjcotkjcC0DGR" width="1000" height="400" />
 
+<img src="https://lh3.googleusercontent.com/RiURKMqvYiENqYqUoXgYBmBb2DERm3eJDOwkukuIhCTYTY-jemvQUzXYQXtN7TVEfaXUWrMpUgL-" width="800" height="400" />
+
 
 ![enter image description here](https://lh3.googleusercontent.com/RiURKMqvYiENqYqUoXgYBmBb2DERm3eJDOwkukuIhCTYTY-jemvQUzXYQXtN7TVEfaXUWrMpUgL-)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI3NzAwMjA1NCwtMTAyOTM5MDg1OSwxMT
+eyJoaXN0b3J5IjpbLTIyNzI4NTY4MywtMTAyOTM5MDg1OSwxMT
 g2NjQwNjEsLTg5Njg1NDc4Myw3OTk1OTMxODgsODA4MzczMjQ3
 LC0xMjc0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMT
 AxMzk1MF19
