Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -295,6 +295,7 @@ end;
 * 이 실습의 나머지는 아래와 같이 대화식으로 수행됩니다. 각 paragraph를 실행하여 단계를 진행합니다. 
 * 샘플 코드에 대한 설명은 모두 주석 및 markdown으로 적어 놓았습니다. 참고해서 실습을 진행하시면 되겠습니다.
 * 아래는 편의를 위한 스크린샷이니 참고하시기 바랍니다.
+* 이 과정은 데이터 전처리부터
 
 <img src="https://lh3.googleusercontent.com/1A9MVyuXe8OJ2CwigKQcOOAdsr5dI5fzkXfIUKqDPsr_a5lYhAg7lS3W0QsBiiY3WPTOOSRyb5gZ" width="800" height="400" />
 
@@ -302,12 +303,13 @@ end;
 
 <img src="https://lh3.googleusercontent.com/RiURKMqvYiENqYqUoXgYBmBb2DERm3eJDOwkukuIhCTYTY-jemvQUzXYQXtN7TVEfaXUWrMpUgL-" width="800" height="400" />
 
+<img src="https://lh3.googleusercontent.com/nRa_vjurVgRA0SwiTbTxVRgK_b1nzW0EQsoZ-MaD1SKLJT6ItNNF7gheKwFC2yFyorgDIeLBlmWY" width="800" height="400" />
 
-![enter image description here](https://lh3.googleusercontent.com/RiURKMqvYiENqYqUoXgYBmBb2DERm3eJDOwkukuIhCTYTY-jemvQUzXYQXtN7TVEfaXUWrMpUgL-)
+<img src="https://lh3.googleusercontent.com/uXlG1OHW0Ke6lXg8Mu1PZSBTIuRdGlvey8XnQKgPfEETDd-WUnJyzGu6OoCctLKYVm8N5drll9Hq" width="800" height="400" />
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIyNzI4NTY4MywtMTAyOTM5MDg1OSwxMT
+eyJoaXN0b3J5IjpbLTM5NjkyMDk4MywtMTAyOTM5MDg1OSwxMT
 g2NjQwNjEsLTg5Njg1NDc4Myw3OTk1OTMxODgsODA4MzczMjQ3
 LC0xMjc0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMT
 AxMzk1MF19
