Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -295,7 +295,7 @@ end;
 * 이 실습의 나머지는 아래와 같이 대화식으로 수행됩니다. 각 paragraph를 실행하여 단계를 진행합니다. 
 * 샘플 코드에 대한 설명은 모두 주석 및 markdown으로 적어 놓았습니다. 참고해서 실습을 진행하시면 되겠습니다.
 * 아래는 편의를 위한 스크린샷이니 참고하시기 바랍니다.
-* 이 과정은 데이터 전처리부터
+* 이 과정은 데이터 전처리부터 모델 생성, 모델 평가, 새로운 데이터에 모델 적용, OLTP 애플리케이션에서 사용하는 단독 레코드에 모델 적용하기 등의 전 과정을 포함합니다.
 
 <img src="https://lh3.googleusercontent.com/1A9MVyuXe8OJ2CwigKQcOOAdsr5dI5fzkXfIUKqDPsr_a5lYhAg7lS3W0QsBiiY3WPTOOSRyb5gZ" width="800" height="400" />
 
@@ -309,7 +309,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM5NjkyMDk4MywtMTAyOTM5MDg1OSwxMT
+eyJoaXN0b3J5IjpbMTM2NTA5NzgwNCwtMTAyOTM5MDg1OSwxMT
 g2NjQwNjEsLTg5Njg1NDc4Myw3OTk1OTMxODgsODA4MzczMjQ3
 LC0xMjc0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMT
 AxMzk1MF19
