Lab400.md updated from https://stackedit.io/

--- a/Lab400.md
+++ b/Lab400.md
@@ -64,7 +64,7 @@ Lab 가이드 원본(영문)을 보시려면 다음 링크를 통해 확인 할 
 -   위의 단계에서 임포트한 `Sales` 프로젝트를 선택합니다.     
     [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/013.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/013.png)
     
--   마케팅 분석가가 생성하여 공유한 콘텐츠를 검토합니다. 현재 `Visualize`관점으로 보여지는 그래프입니다. `Prepare`와`Narrate` 관점으로도 가능합니다. `Narrate` 관점를 선택하십시오.
+-   마케팅 분석가가 생성하여 공유한 콘텐츠를 검토합니다. 현재 `시각화`관점으로 보여지는 그래프입니다. `준비`와`설명 - Presentation Mode` 관점으로도 가능합니다. `설명` 탭을 선택하십시오.
     
     [![](https://github.com/oracle/learning-library/raw/master/workshops/adwc4dev/images/IL-400/014.png)](https://github.com/oracle/learning-library/blob/master/workshops/adwc4dev/images/IL-400/014.png)
     
@@ -385,5 +385,6 @@ M3NTksNzQ0NTk0Mjg3LC03MjA5NjE3MCwtMTYzOTIyMTM5Niwy
 MDcxNjkyMDE5XX0=
 -->
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzEyMDYzNjI0LDczMzkzMDg5OF19
+eyJoaXN0b3J5IjpbNzI1OTY2ODIxLDMxMjA2MzYyNCw3MzM5Mz
+A4OThdfQ==
 -->
